--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title> welcome to kolkata </title>
 <center><h1> WELCOME TO THE CITY OF JOY THE CAPITAL OF BENGAL</center>
-<body bgcolor="PINK">
+<body bgcolor="green">
 <marquee><h3> PHIR MILENGE ........ </marquee>
