--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title> welcome to kolkata </title>
-<center><h1> WELCOME TO THE CITY OF JOY THE CAPITAL OF BENGAL</center>
-<body bgcolor="green">
+<center><h1> WELCOME TO THE CITY OF JOY THE CAPITAL OF BENGAL .... GO GREEN</center>
+<body bgcolor="red">
 <marquee><h3> PHIR MILENGE ........ </marquee>
